# tcp-ClientServer

socketNet/: CMakeLists.txt
socketNet/client/: CMakeLists.txt  main.cpp  tcp-client-side(C++ Sample).txt
socketNet/netwrk/: CMakeLists.txt
socketNet/netwrk/include/netwrk/: tcp_connection.h  tcp_server.h
socketNet/netwrk/src/: tcp_connection(C++ Sample).txt  tcp_connection.cpp  tcp_server(C++ Sample).txt  tcp_server.cpp
socketNet/server/: CMakeLists.txt  main.cpp  tcp-server-side(C++ Sample).txt
